== Version 1.0.9

Release notes here

* Applied [#13129] Fix failing specs in spec_distributed (Patch from Bob Cotton)
* Applied [#13118] Rinda support for Spec::Distributed (Patch from Bob Cotton)
* Removed BehaviourEval
* Behaviour subclasses Module
* Removed Behaviour#inherit
* Moved implementation of install_dependencies to example_rails_app
* Renamed RSPEC_DEPS to VENDOR_DEPS
* Added Example#not_implemented?
* You can now stub!(:msg).with(specific args)
* describe("A", Hash, "with one element") will generate description "A Hash with one element" (Tip from Ola Bini)
* Applied [#13016] [DOC] Point out that view specs render, well, a view (Patch from Jay Levitt)
* Applied [#13078] Develop rspec with autotest (Patch from Scott Taylor)
* Fixed [#13065] Named routes throw a NoMethodError in Helper specs (Patches from James Deville and Mike Mangino)
* Added (back) the verbose attribute in Spec::Rake::SpecTask
* Changed documentation to point at the new http svn URL, which is more accessible.

== Version 1.0.8

Another bugfix release - this time to resolve the version mismatch

== Version 1.0.7

Quick bugfix release to ensure that you don't have to have the rspec gem installed
in order to use autotest with rspec_on_rails.

* Fixed [#13015] autotest gives failure in 'spec_command' after upgrade 1.0.5 to 1.0.6

== Version 1.0.6

The "holy cow, batman, it's been a long time since we released and there are a ton of bug
fixes, patches and even new features" release.

Warning: Spec::Rails users: In fixing 11508, we've removed the raise_controller_errors method. As long as you
follow the upgrade instructions and run 'script/generate rspec' you'll be fine, but if you skip this
step you need to manually go into spec_helper.rb and remove the call to that method (if present - it
might not be if you haven't upgraded in a while).

Warning: Implementors of custom formatters. Formatters will now be sent an Example object instead of just a 