@@ -44,16 +44,16 @@ module Spec
         #   template.stub_render(:partial => 'thing', :collection => things)
         #
         def expect_render(opts={})
-          expectation = expect_render_mock_proxy.should_receive(:render, :expected_from => caller(1)[0]).with(opts)
           register_verify_after_each
-          expectation
+          expect_render_mock_proxy.should_receive(:render, :expected_from => caller(1)[0]).with(opts)
         end
 
         # This is exactly like expect_render, with the exception that the call to render will not
         # be verified. Use this if you are trying to isolate your example from a complicated render
         # operation but don't care whether it is called or not.
         def stub_render(opts={})
-          expect_render_mock_proxy.should_receive(:render, :expected_from => caller(1)[0]).with(opts).any_number_of_times
+          register_verify_after_each
+          expect_render_mock_proxy.stub!(:render, :expected_from => caller(1)[0]).with(opts)
         end
   
         def verify_rendered # :nodoc:
@@ -81,11 +81,7 @@ module Spec
         end
   
         def expect_render_mock_proxy #:nodoc:
-          @expect_render_mock_proxy ||= lambda do
-            proxy = Spec::Mocks::Mock.new("expect_render_mock_proxy")
-            proxy.stub!(:render)
-            proxy
-          end.call
+          @expect_render_mock_proxy ||= Spec::Mocks::Mock.new("expect_render_mock_proxy")
         end
   
       end
