@@ -15,11 +15,12 @@ module ActionView #:nodoc:
 
     alias_method :orig_render, :render
     def render(options = {}, old_local_assigns = {}, &block)
-      if (Hash === options)
+      if expect_render_mock_proxy.send(:__mock_proxy).send(:find_matching_expectation, :render, options)
         expect_render_mock_proxy.render(options)
-      end
-      unless expect_render_mock_proxy.send(:__mock_proxy).send(:find_matching_expectation, :render, options)
-        orig_render(options, old_local_assigns, &block)
+      else
+        unless expect_render_mock_proxy.send(:__mock_proxy).send(:find_matching_method_stub, :render, options)
+          orig_render(options, old_local_assigns, &block)
+        end
       end
     end
   end
